Rename Recipe storage tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,6 @@ find_package(nlohmann_json REQUIRED)
 
 find_package(Pistache CONFIG REQUIRED)
 
-#add_subdirectory(test/googletest)
-
 add_executable(cookbox_server.exe ${SRC_DIR}/cookbox_server.cpp ${SRC_DIR}/recipe.cpp ${SRC_DIR}/recipe_storage.cpp)
 set_target_properties(cookbox_server.exe PROPERTIES
 					CXX_STANDARD 14
@@ -27,7 +25,7 @@ target_link_libraries(cookbox_server.exe pistache sqlite3)
 enable_testing()
 find_package(GTest REQUIRED)
 
-add_executable(test.exe ${TEST_DIR}/recipe_test.cpp ${SRC_DIR}/recipe.cpp ${SRC_DIR}/recipe_storage.cpp)
+add_executable(test.exe ${TEST_DIR}/storage_test.cpp ${SRC_DIR}/recipe.cpp ${SRC_DIR}/recipe_storage.cpp)
 
 set_target_properties(test.exe PROPERTIES
 				CXX_STANDARD 14
