--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,5 +15,5 @@ find_package(cpprestsdk REQUIRED)
 
 set_property(TARGET recipe_server PROPERTY CXX_STANDARD 14)
 target_compile_options(recipe_server PRIVATE -Wall)
-target_include_directories(recipe_server PUBLIC "include" "../sqlite_orm/include")
+target_include_directories(recipe_server PUBLIC ../include ../../sqlite_orm/include)
 target_link_libraries(recipe_server sqlite3 cpprestsdk::cpprest boost_system)
